# lawnmower

./: .gitignore
agent/: CMakeLists.txt  agent-config.h.in  agent_settings.cpp  camera_worker.cpp  device_control.cpp  device_server.cpp  device_session.cpp  main.cpp  peripheral_effectors.cpp
agent/include/: agent_settings.hpp  camera_worker.hpp  device_control.hpp  device_server.hpp  device_session.hpp  peripheral_effectors.hpp
client/: CMakeLists.txt  camera.cpp  client.cpp  default_screen.cpp  fonts.cpp  indications.cpp  lawnmowerc-config.h.in  lawnmowerc_settings.cpp  main.cpp  output_terminal.cpp  screen_buffer.cpp  ssl_connection.cpp
client/cmake/Modules/: FindGLFW3.cmake  FindJPEGTURBO.cmake
client/include/: camera.hpp  client.hpp  default_screen.hpp  fonts.hpp  indications.hpp  lawnmowerc_settings.hpp  output_terminal.hpp  pixel.hpp  screen_buffer.hpp  ssl_connection.hpp
common/: lawnmower.proto
